--- a/index.html
+++ b/index.html
@@ -1049,8 +1049,8 @@
                         <span>HTML/CSS</span>
                     </div>
                     <div class="project-links">
-                        <a href="#"><i class="fas fa-code"></i> View Code</a>
-                        <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        <a href="https://github.com/SriHarshith27/Student-Course-Registration-System-Project-In-Django-Source-Code-main"><i class="fas fa-code"></i> View Code</a>
+                        <a href="https://github.com/SriHarshith27/Student-Course-Registration-System-Project-In-Django-Source-Code-main"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                     </div>
                 </div>
             </div>
@@ -1071,7 +1071,7 @@
                         <span>Microservices</span>
                     </div>
                     <div class="project-links">
-                        <a href="#"><i class="fas fa-code"></i> View Code</a>
+                        <a href="https://github.com/SriHarshith27/JFSD-Spring-boot-project"><i class="fas fa-code"></i> View Code</a>
                         <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                     </div>
                 </div>
@@ -1129,8 +1129,8 @@
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/harshith2720" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                     <a href="https://github.com/SriHarshith27" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="https://x.com/Harshith273"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/_harshith_27/"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="contact-form">
